--- a/report/report.bib
+++ b/report/report.bib
@@ -244,3 +244,19 @@
   year={2018},
   organization={SIAM}
 }
+
+@book{motwani2010randomized,
+  title={Randomized algorithms},
+  author={Motwani, Rajeev and Raghavan, Prabhakar},
+  year={2010},
+  publisher={Chapman \& Hall/CRC}
+}
+
+@inproceedings{mulmuley1987matching,
+  title={Matching is as easy as matrix inversion},
+  author={Mulmuley, Ketan and Vazirani, Umesh V and Vazirani, Vijay V},
+  booktitle={Proceedings of the nineteenth annual ACM symposium on Theory of computing},
+  pages={345--354},
+  year={1987},
+  organization={ACM}
+}
