--- a/report/survey.tex
+++ b/report/survey.tex
@@ -130,7 +130,7 @@ A summary of preprocessing, space and query times for distance oracles in planar
     Mozes and Sommer \cite{mozes2012exact} & $S\in [n, n^{4/3}]$ &
     $\tilde{O}(n/\sqrt{S})$ & $\tilde{O}(S)$ \\
     \hline
-    Mozes and Sommer \cite{mozes2012exact} & $S=O(n)$ & $O(n^{1/2+\varepsilon}$ & $O(n\lg
+    Mozes and Sommer \cite{mozes2012exact} & $S=O(n)$ & $O(n^{1/2+\varepsilon})$ & $O(n\lg
     n)$ \\
     \hline
     Cohen-Added et al. \cite{cohen2017fast} & $S\in [n^{3/2}, n^2]$ &
