Exact planar update

--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,23 +1,19 @@
 \begin{abstract}
-  TODO TODO TODO TODO TODO \\
-  \\
   \begin{itemize}
     \item Expand introduction (introduce problem)
-    \item Techniques
-      \begin{itemize}
-        \item Additively weighted Voronoi diagrams
-      \end{itemize}
+    \item Expand techniques (clarifications)
     \item Finish survey
       \begin{itemize}
         \item Planar case (dynamic)
       \end{itemize}
     \item Results
       \begin{itemize}
-        \item Give $O(n^{1.5})$ space, $\text{poly}(\lg n)$ oracle (almost).
-        \item Is it necessary to use klein/ddg for preprocessing in r-div?
-        \item Other results? (FR-djikstra, dynamic version)
+        \item Is it necessary to use klein/ddg for preprocessing in r-div.
+        \item Recursive decomposition.
+        \item Fix gap.
+        \item Dependence on $\ell$.
+        \item Preprocessing time for case $1$.
+        \item Preprocessing for case $2$.
       \end{itemize}
-    \item Concluding remarks and future works
-    \item Appendices
   \end{itemize}
 \end{abstract}
