--- a/report/report.tex
+++ b/report/report.tex
@@ -123,6 +123,8 @@
 \newpage
 \input{exactPlanar.tex}
 \newpage
+\input{dynamicPlanar.tex}
+\newpage
 \input{conclusion.tex}
 
 \newpage
@@ -132,6 +134,6 @@
 
 \newpage
 \appendix
-\input{missingproofs.tex}
+%\input{missingproofs.tex}
 
 \end{document}
