--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,6 +1,5 @@
-\section{Introduction}
-\label{sec:introduction}
-Efficient algorithms on networks are becoming... Road mapping .. Graphs. \\
+\section{Introduction}\label{sec:introduction}
+Efficient algorithms on networks ... Road mapping .. Graphs. \\
 As these networks can be quite large, one problem is constructing a compact \textit{distance
 oracle}, which is a data structure that is able to either give exact or approximate
 shortest paths between two nodes quickly while not taking up too much space. They were
