--- a/report/report.bib
+++ b/report/report.bib
@@ -260,3 +260,14 @@
   year={1987},
   organization={ACM}
 }
+
+@article{dietzfelbinger1994dynamic,
+  title={Dynamic perfect hashing: Upper and lower bounds},
+  author={Dietzfelbinger, Martin and Karlin, Anna and Mehlhorn, Kurt and Meyer auF der Heide, Friedhelm and Rohnert, Hans and Tarjan, Robert E},
+  journal={SIAM Journal on Computing},
+  volume={23},
+  number={4},
+  pages={738--761},
+  year={1994},
+  publisher={SIAM}
+}
