--- a/report/report.tex
+++ b/report/report.tex
@@ -34,6 +34,8 @@
 \usepackage[group-separator={,}]{siunitx}
 \sisetup{group-minimum-digits = 3}
 
+%\renewcommand{\baselinestretch}{1.5}
+
 % \abs{} command
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \makeatletter
@@ -124,6 +126,8 @@
 \input{exactPlanar.tex}
 \newpage
 \input{dynamicPlanar.tex}
+\newpage
+\input{undirectedPlanar.tex}
 \newpage
 \input{conclusion.tex}
 
