--- a/report/survey.tex
+++ b/report/survey.tex
@@ -146,6 +146,8 @@ A summary of preprocessing, space and query times for distance oracles in planar
     \hline
     Gawrychowski et al. \cite{gawrychowski2017better} & $S=O(n^{3/2})$ & $O(\lg n)$ & --- \\
     \hline
+    Wulff-Nilsen \cite{wulff2010algorithms} & $S=o(n^2)$ & $O(1)$ & $o(n^2)$ \\
+    \hline
   \end{tabular}
   \caption{Results for distance oracles in directed planar graphs that are not
     vertex-labeled. All results are exact. \\
