--- a/report/techniques.tex
+++ b/report/techniques.tex
@@ -1,5 +1,7 @@
 \section{Techniques for planar graphs}\label{techniques}
 In this section, we describe techniques popularly used in algorithms for planar graphs.
+These techniques will also be used to optimize our distance oracles in preprocessing, space and
+query.
 
 \subsection{Separators in planar graphs}
 A \textit{Jordan curve} is a simple closed curve in the plane. Given a planar graph $G$,
