--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,19 +1,3 @@
 \begin{abstract}
-  \begin{itemize}
-    \item Expand introduction (introduce problem)
-    \item Expand techniques (clarifications)
-    \item Finish survey
-      \begin{itemize}
-        \item Planar case (dynamic)
-      \end{itemize}
-    \item Results
-      \begin{itemize}
-        \item Is it necessary to use klein/ddg for preprocessing in r-div.
-        \item Recursive decomposition.
-        \item Fix gap.
-        \item Dependence on $\ell$.
-        \item Preprocessing time for case $1$.
-        \item Preprocessing for case $2$.
-      \end{itemize}
-  \end{itemize}
+  Victory text.
 \end{abstract}
